.um.mutant_output17156
Picked up JAVA_TOOL_OPTIONS: -Duser.language=en
/Users/rainyd4y/projects/SAMutator/seeds/PMD_Validation/bestpractices_SimplifiableTestAssertion/SimplifiableTestAssertion23.java:10: error: class, interface, enum, or record expected
continue;
^
1 error
